doc: update readme, add instructions

--- a/views/payment.hbs
+++ b/views/payment.hbs
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-5 d-flex justify-content-center" >
 
   <div class="card" style="width: 50rem;">
-    <div class="card-header d-flex justify-content-center">
+    <div class="card-header text-center">
       <h5 class="mt-2">確認預約</h5>
     </div>
     <div class="card-body">
@@ -23,6 +23,9 @@
         </fieldset>
         <button class="btn btn-success col-sm-6 mx-auto" type="submit">進行付款</button>
       </form>
+    </div>
+    <div class="card-footer text-muted text-center">
+      請注意：此為測試平台，請使用測試信用卡卡號：4000-2211-1111-1111
     </div>
   </div>
 
