--- a/views/forgot_password.hbs
+++ b/views/forgot_password.hbs
@@ -9,10 +9,28 @@
         <input class="form-control" id="email" type="email" name="email" class="form-control" placeholder="Email"
           required autofocus>
       </div>
-      
+
+      <!-- reCAPTCHA -->
+      <div class="form-row mb-3">
+        <div class="g-recaptcha" data-sitekey="{{RECAPTCHA_SITEKEY}}">
+        </div>
+      </div>
+
       <div class="d-grid mb-3">
         <button class="btn btn-primary" type="submit">Send OTP to my email</button>
       </div>
     </form>
   </div>
 </div>
+
+<script>
+  // reCAPTCHA verification
+  let form = document.querySelector('form');
+  form.addEventListener('submit', event => {    
+    if (grecaptcha.getResponse() == "") {
+      event.preventDefault();
+      alert("Please verify reCAPTCHA");
+    }
+  });
+
+</script>
