fix: remove DB Reservation column work_count
The column work_count is against the normalization form and causes
errors when a collection list is edited after a reservation is made.
As a result, column work_count should be removed. Instead, count works
each time when acquiring reservations.

--- a/views/reservations.hbs
+++ b/views/reservations.hbs
@@ -29,7 +29,7 @@
           <td>{{this.timeSlot}}</td>
           <td>{{this.contact_person}}</td>
           <td>{{this.phone}}</td>
-          <td>{{this.Collection.name}} ({{this.work_count}}件)
+          <td>{{this.Collection.name}} ({{this.Collection.work_count}}件)
             <a class="ms-2" href="/collections/{{this.Collection.id}}">
               <span style="font-size: small;"><i class="fa-solid fa-arrow-up-right-from-square"></i></span>
             </a>
