--- a/views/admin/reservations.hbs
+++ b/views/admin/reservations.hbs
@@ -32,7 +32,8 @@
           <td>{{this.User.name}}</td>   <!-- ADD -->
           <td>{{this.contact_person}}</td>
           <td>{{this.phone}}</td>
-          <td>{{this.Collection.name}} ({{this.work_count}}件)
+          <td>
+            {{this.Collection.name}} ({{this.Collection.work_count}} 件)
             <a class="ms-2" href="/collections/{{this.Collection.id}}">
               <span style="font-size: small;"><i class="fa-solid fa-arrow-up-right-from-square"></i></span>
             </a>
