--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -59,6 +59,17 @@
               </a>
             </li>
             {{/if}}
+            {{#unless user.isAdmin}}
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="/reservations">Reservations</a>
+            </li>
+            {{/unless}}
+            {{#if user.isAdmin}}
+            <li>
+              <a class="nav-link mx-2" href="/admin/reservations">Reservations
+              </a>
+            </li>
+            {{/if}}
             {{#if user}}
             <li class="nav-item ms-2 me-5 dropdown">
 
@@ -70,9 +81,6 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
                   <a class="dropdown-item" href="/user/profile">Profile</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/reservations">Reservation</a>
                 </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
