fix: image upload error handling, update imgur

--- a/views/admin/edit_artist.hbs
+++ b/views/admin/edit_artist.hbs
@@ -70,7 +70,8 @@
 
             <div class="row">
               <label class="col-sm-2 col-form-label" for="image_upload" align="center">作品圖示
-                <small class="text-muted d-block">一次最多10張</small></label>
+                <small class="text-muted d-block">一次最多10張</small>
+                <small class="text-muted d-block"> （20MB以下 JPEG/PNG）</small>
               </label>
               <div class="col-sm-10">
                 <div class="input-group">
@@ -85,7 +86,7 @@
             
             <div class="mb-3 row">
               <label class="col-sm-2 col-form-label" for="description" align="center">圖片說明
-                <small class="text-muted d-block">請隨圖片上傳</small></label>
+                <small class="text-muted d-block">請隨圖片上傳</small>
               </label>
               <div class="col-sm-10">
                 <textarea class="form-control" id="description" name="description" maxlength="1000" rows="2"></textarea>
